--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,9 @@
                             <li><a class="dropdown-item" href="{% url 'dashboard' %}">
                                 <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                             </a></li>
+                            <li><a class="dropdown-item" href="{% url 'quick_member_enroll' %}">
+                                <i class="fas fa-bolt me-2"></i>Quick Enroll Member
+                            </a></li>
                             <li><a class="dropdown-item" href="{% url 'lead_capture' %}" target="_blank">
                                 <i class="fas fa-user-plus me-2"></i>Quick Lead Capture
                             </a></li>
